@@ -1,10 +1,15 @@
 package umc.yorieter.service.RecipeService;
 
-
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 import umc.yorieter.config.security.util.SecurityUtil;
 import umc.yorieter.domain.Ingredient;
@@ -16,24 +21,38 @@ import umc.yorieter.payload.exception.GeneralException;
 import umc.yorieter.payload.status.ErrorStatus;
 import umc.yorieter.repository.*;
 import umc.yorieter.service.ImageUploadService.ImageUploadService;
+import umc.yorieter.web.dto.request.IngredientRequestDTO;
 import umc.yorieter.web.dto.request.RecipeRequestDTO;
+import umc.yorieter.web.dto.response.IngredientResponseDTO;
 import umc.yorieter.web.dto.response.RecipeResponseDTO;
 
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Component
 @Slf4j
-public class RecipeServiceImpl implements RecipeService{
+public class RecipeServiceImpl implements RecipeService {
 
     private final RecipeRepository recipeRepository;
     private final MemberRepository memberRepository;
     private final RecipeLikeRepository recipeLikeRepository;
     private final ImageUploadService imageUploadService;
     private final IngredientRepository ingredientRepository;
+    private final RecipeIngredientRepository recipeIngredientRepository;
+    RestTemplate restTemplate = new RestTemplate();
+
+    @Value("${api.service.key}")
+    private String serviceKey;
 
     // 레시피 & 식재료 함께 조회 (JPQL 메소드)
     public Recipe getRecipeWithIngredients(Long recipeId) {
@@ -42,6 +61,7 @@ public class RecipeServiceImpl implements RecipeService{
 
 
     // 레시피 작성
+    @Transactional
     @Override
     public RecipeResponseDTO.DetailRecipeDTO createRecipe(RecipeRequestDTO.CreateRecipeDTO createRecipeDTO, MultipartFile image) {
         // 회원 확인
@@ -55,45 +75,35 @@ public class RecipeServiceImpl implements RecipeService{
             imageUrl = imageUploadService.uploadImage(image);
         }
 
-        // DTO에서 데이터 가져와 Recipe 객제 생성
+        // DTO에서 데이터 가져와 Recipe 객체 생성
         Recipe recipe = Recipe.builder()
                 .member(member)
                 .title(createRecipeDTO.getTitle())
                 .description(createRecipeDTO.getDescription())
-                .calories(createRecipeDTO.getCalories())
-                .recipeIngredientList(new ArrayList<>()) // 식재료 초기화 추가
+                .calories(0)
+                .recipeIngredientList(new ArrayList<>())
                 .build();
-
 
         // 이미지 URL 설정
         if (imageUrl != null) {
-            recipe.updateRecipeImageUrl(imageUrl);  // 이미지 URL 업데이트
+            recipe.updateRecipeImageUrl(imageUrl); // 이미지 URL 업데이트
         }
 
-        // 식재료 추가
-        List<Recipe_Ingredient> recipeIngredientList = new ArrayList<>();
-        for (String ingredientName : createRecipeDTO.getIngredientNames()) {
-            // 식재료 찾고 없으면 새로 생성
-            Ingredient ingredient = ingredientRepository.findByName(ingredientName)
-                    .orElseGet(() -> ingredientRepository.save(new Ingredient(null, ingredientName, null))); // 이름만 새로 저장 ..
-
-            // Recipe_Ingredient 객체 생성
-            Recipe_Ingredient recipeIngredient = Recipe_Ingredient.builder()
-                    .recipe(recipe)
-                    .ingredient(ingredient)
-                    .build();
-
-            // recipeIngredientList에 추가
-            recipeIngredientList.add(recipeIngredient);
-        }
-
-        // Recipe에 식재료 리스트 추가
-        recipe.getRecipeIngredientList().addAll(recipeIngredientList);
-
-
-        // 레시피 저장
+        // Recipe 저장
         Recipe savedRecipe = recipeRepository.save(recipe);
 
+        // 식재료 추가 및 저장
+        List<Recipe_Ingredient> recipeIngredientList = searchAndSaveIngredients(createRecipeDTO.getIngredientList(), savedRecipe);
+
+        // 레시피 칼로리 업데이트
+        int totalCalories = calculateTotalCalories(recipeIngredientList);
+        savedRecipe.updateCalories(totalCalories);
+        recipeRepository.save(savedRecipe);
+
+        // 응답 DTO 작성 및 반환
+        List<String> ingredientNames = recipeIngredientList.stream()
+                .map(recipeIngredient -> recipeIngredient.getIngredient().getName())
+                .collect(Collectors.toList());
 
         return RecipeResponseDTO.DetailRecipeDTO.builder()
                 .recipeId(savedRecipe.getId())
@@ -102,11 +112,11 @@ public class RecipeServiceImpl implements RecipeService{
                 .description(savedRecipe.getDescription())
                 .calories(savedRecipe.getCalories())
                 .imageUrl(savedRecipe.getRecipeImage() != null ? savedRecipe.getRecipeImage().getUrl() : null)
-                .ingredientNames(createRecipeDTO.getIngredientNames()) // 식재료 리스트 추가
+                .ingredientNames(ingredientNames)
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
                 .build();
     }
-
-
 
     // 레시피 전체 조회 (생성시간순 정렬) 추후 좋아요순으로 변경 필요
     @Override
@@ -130,6 +140,7 @@ public class RecipeServiceImpl implements RecipeService{
                             .imageUrl(recipe.getRecipeImage().getUrl())
                             .ingredientNames(ingredientNames) // 식재료 리스트 추가
                             .createdAt(recipe.getCreatedAt())
+                            .updatedAt(recipe.getUpdatedAt())
                             .build();
                 })
                 .collect(Collectors.toList());
@@ -164,13 +175,13 @@ public class RecipeServiceImpl implements RecipeService{
                 .imageUrl(recipe.getRecipeImage().getUrl())
                 .ingredientNames(ingredientNames) // 식재료 리스트 추가
                 .createdAt(recipe.getCreatedAt())
+                .updatedAt(recipe.getUpdatedAt())
                 .build();
     }
 
 
-
-
     // 레시피 수정
+    @Transactional
     @Override
     public RecipeResponseDTO.DetailRecipeDTO updateRecipe(Long recipeId, RecipeRequestDTO.UpdateRecipeDTO updateRecipeDTO, MultipartFile image) {
         Long memberId = SecurityUtil.getCurrentMemberId();
@@ -198,12 +209,31 @@ public class RecipeServiceImpl implements RecipeService{
             recipe.updateRecipeImageUrl(imageUrl);
         }
 
+        // 기존 식재료 삭제
+        List<Recipe_Ingredient> existingIngredients = new ArrayList<>(recipe.getRecipeIngredientList());
+        for (Recipe_Ingredient recipeIngredient : existingIngredients) {
+            try {
+                recipeIngredientRepository.delete(recipeIngredient);
+            } catch (Exception e) {
+                log.error("Error deleting Recipe_Ingredient with ID: {}", recipeIngredient.getId(), e);
+            }
+        }
+        recipe.getRecipeIngredientList().clear();
+
+        // 새로운 식재료 리스트 추가
+        List<Recipe_Ingredient> recipeIngredientList = searchAndSaveIngredients(updateRecipeDTO.getIngredientList(), recipe);
+
+        // 총 칼로리 다시 계산
+        int totalCalories = calculateTotalCalories(recipeIngredientList);
+        recipe.updateCalories(totalCalories);
+
+        // 레시피 저장
         recipeRepository.save(recipe);
 
-        // 식재료 리스트 가져오기
-        List<String> ingredientNames = recipe.getRecipeIngredientList().stream()
+        // 응답 DTO 작성 및 반환
+        List<String> ingredientNames = recipeIngredientList.stream()
                 .map(recipeIngredient -> recipeIngredient.getIngredient().getName())
-                .toList();
+                .collect(Collectors.toList());
 
         return RecipeResponseDTO.DetailRecipeDTO.builder()
                 .recipeId(recipe.getId())
@@ -211,8 +241,10 @@ public class RecipeServiceImpl implements RecipeService{
                 .title(recipe.getTitle())
                 .description(recipe.getDescription())
                 .calories(recipe.getCalories())
-                .imageUrl(recipe.getRecipeImage().getUrl())
+                .imageUrl(recipe.getRecipeImage() != null ? recipe.getRecipeImage().getUrl() : null)
                 .ingredientNames(ingredientNames)  // 식재료 리스트 추가
+                .createdAt(recipe.getCreatedAt())
+                .updatedAt(LocalDateTime.now())
                 .build();
     }
 
@@ -274,5 +306,141 @@ public class RecipeServiceImpl implements RecipeService{
 
         recipeLikeRepository.delete(recipeLike);
 
+    }
+
+
+    // 메소드 정의
+    // 1. 식재료 검색
+    @Override
+    public IngredientResponseDTO.IngredientDto searchIngredient(String name, Long recipeId) {
+        String url = "https://apis.data.go.kr/1471000/FoodNtrCpntDbInfo/getFoodNtrCpntDbInq";
+
+        try {
+            // URL 인코딩
+            String encodedName = URLEncoder.encode(name, StandardCharsets.UTF_8.toString());
+            String encodedServiceKey = URLEncoder.encode(serviceKey, StandardCharsets.UTF_8.toString());
+            String query = String.format("serviceKey=%s&pageNo=1&numOfRows=5&type=json&FOOD_NM_KR=%s",
+                    encodedServiceKey, encodedName);
+
+            // URI 객체 생성
+            URI uri = new URI(url + "?" + query);
+
+            // 로그에 인코딩된 URI 출력
+            log.info("Encoded URI: {}", uri);
+
+            // HTTP GET 요청
+            ResponseEntity<String> response = restTemplate.getForEntity(uri, String.class);
+
+            if (response.getStatusCode().is2xxSuccessful()) {
+                // 응답을 JSON 형태로 파싱
+                ObjectMapper objectMapper = new ObjectMapper();
+                JsonNode rootNode = objectMapper.readTree(response.getBody());
+
+                // JSON 응답에서 필요한 데이터 추출
+                JsonNode itemsNode = rootNode.path("body").path("items");
+
+                if (itemsNode.isArray() && itemsNode.size() > 0) {
+                    JsonNode item = itemsNode.get(0);  // 첫 번째 아이템
+
+                    // AMT_NUM1 (칼로리) 데이터 추출
+                    String calorieStr = item.path("AMT_NUM1").asText();
+                    Integer calorie = null;
+
+                    if (calorieStr != null && !calorieStr.isEmpty()) {
+                        try {
+                            calorie = Integer.parseInt(calorieStr);
+                        } catch (NumberFormatException e) {
+                            calorie = 0; // 기본값 설정 또는 적절한 예외 처리
+                        }
+                    }
+
+                    Optional<Ingredient> existingIngredientOpt = ingredientRepository.findByName(name);
+                    Ingredient ingredient;
+                    if (existingIngredientOpt.isPresent()) {
+                        // 이미 존재하는 Ingredient 사용
+                        ingredient = existingIngredientOpt.get();
+                    } else {
+                        // 새로운 Ingredient 객체 생성 및 저장
+                        ingredient = Ingredient.builder()
+                                .name(name)
+                                .calorie(calorie)
+                                .build();
+                        ingredient = ingredientRepository.save(ingredient);
+                    }
+
+                    // API에서 불러온 칼로리를 포함한 IngredientDto 반환
+                    return IngredientResponseDTO.IngredientDto.builder()
+                            .name(ingredient.getName())
+                            .calorie(ingredient.getCalorie())
+                            .build();
+                }
+            }
+
+            // 검색 결과가 없을 때
+            log.error("No items found for ingredient name: {}", name);
+            Ingredient ingredient = Ingredient.builder()
+                    .name(name)
+                    .calorie(0) // 검색 결과가 없으면 0으로 저장
+                    .build();
+            ingredient = ingredientRepository.save(ingredient);
+
+            return IngredientResponseDTO.IngredientDto.builder()
+                    .name(ingredient.getName())
+                    .calorie(ingredient.getCalorie())
+                    .build();
+
+        } catch (IOException e) {
+            log.error("IOException while calling API: ", e);
+            throw new GeneralException(ErrorStatus.API_CALL_ERROR);
+        } catch (URISyntaxException e) {
+            log.error("URISyntaxException while creating URI: ", e);
+            throw new GeneralException(ErrorStatus.API_CALL_ERROR);
+        }
+    }
+
+    // 2. 총칼로리 계산
+    private int calculateTotalCalories(List<Recipe_Ingredient> recipeIngredientList) {
+        return recipeIngredientList.stream()
+                .mapToInt(recipeIngredient -> {
+
+                    // 100g 칼로리 -> 무게 비율로 변경
+                    Integer caloriePer100g = recipeIngredient.getIngredient().getCalorie();
+                    Integer quantity = recipeIngredient.getQuantity();
+
+                    if (caloriePer100g == null || quantity == null) {
+                        return 0;
+                    }
+
+                    return (int) (caloriePer100g * (quantity / 100.0));
+                })
+                .sum();
+    }
+
+    // 3. 식재료 리스트 검색&저장
+    private List<Recipe_Ingredient> searchAndSaveIngredients(List<IngredientRequestDTO.IngredientAndQuantityDTO> ingredientList, Recipe recipe) {
+        return ingredientList.stream()
+                .map(ingredientRequestDTO -> {
+                    // searchIngredient 호출하여 IngredientDto 객체 반환
+                    IngredientResponseDTO.IngredientDto ingredientDto = searchIngredient(ingredientRequestDTO.getName(), recipe.getId());
+
+                    // Ingredient 객체 검색 (중복 방지)
+                    Ingredient ingredient = ingredientRepository.findByName(ingredientDto.getName())
+                            .orElseThrow(() -> new GeneralException(ErrorStatus.INGREDIENT_NOT_FOUND, "Ingredient not found after search."));
+
+                    // Recipe_Ingredient 객체 생성
+                    Recipe_Ingredient recipeIngredient = Recipe_Ingredient.builder()
+                            .recipe(recipe)
+                            .ingredient(ingredient)
+                            .quantity(ingredientRequestDTO.getQuantity()) // 무게(양) 설정
+                            .build();
+
+                    boolean alreadyExists = recipeIngredientRepository.existsByRecipeAndIngredient(recipe, ingredient);
+                    if (!alreadyExists) {
+                        recipeIngredientRepository.save(recipeIngredient);
+                    }
+
+                    return recipeIngredient;
+                })
+                .collect(Collectors.toList());
     }
 }
